--- a/src/styles.css
+++ b/src/styles.css
@@ -27,7 +27,7 @@
 
 .main-emoji-temp {
   font-size: 35px;
-  color: #2741d4;
+  color: #0e0653;
 }
 
 .cityLinks {
@@ -63,9 +63,14 @@
   text-align: center;
   font-weight: bold;
   text-decoration: underline;
-  padding: 30px;
 }
 
 .unit {
   font-size: 18px;
+  font-weight: bold;
+}
+
+a {
+  text-decoration: none;
+  color: #1631ca;
 }
